--- a/server/package.json
+++ b/server/package.json
@@ -10,8 +10,13 @@
     "author": "LuanDinh",
     "license": "ISC",
     "dependencies": {
+        "@prisma/client": "^5.4.2",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
-        "nodemon": "^3.0.1"
+        "nodemon": "^3.0.1",
+        "pg": "^8.11.3"
+    },
+    "devDependencies": {
+        "prisma": "^5.4.2"
     }
 }
