--- a/server/package.json
+++ b/server/package.json
@@ -3,16 +3,21 @@
     "version": "1.0.0",
     "description": "This is careerez backend",
     "main": "index.js",
+    "type": "module",
     "scripts": {
-        "start": "nodemon ./index.js",
+        "start": "nodemon --experimental-modules ./index.js",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "author": "LuanDinh",
     "license": "ISC",
     "dependencies": {
         "@prisma/client": "^5.4.2",
+        "bcrypt": "^5.1.1",
+        "cors": "^2.8.5",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
+        "google-auth-library": "^9.1.0",
+        "jsonwebtoken": "^9.0.2",
         "nodemon": "^3.0.1",
         "pg": "^8.11.3"
     },
