--- a/client/.env
+++ b/client/.env
@@ -1,1 +1,2 @@
 VITE_REACT_APP_CLIENT_ID = "676990417523-rjofbnu95fiego8hk92lmdhjp0dhtklq.apps.googleusercontent.com"
+VITE_SERVER_DOMAIN = http://localhost:5000
