--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@react-oauth/google": "^0.11.1",
     "@tabler/icons-react": "^2.40.0",
     "axios": "^1.5.1",
+    "framer-motion": "^10.16.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0"
