--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "framer-motion": "^10.16.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-intersection-observer": "^9.5.3",
     "react-router-dom": "^6.16.0"
   },
   "devDependencies": {
