--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,12 @@
     "@mantine/tiptap": "^7.2.2",
     "@react-oauth/google": "^0.11.1",
     "@tabler/icons-react": "^2.41.0",
+    "@tiptap/extension-highlight": "^2.1.12",
     "@tiptap/extension-link": "^2.1.12",
+    "@tiptap/extension-subscript": "^2.1.12",
+    "@tiptap/extension-superscript": "^2.1.12",
+    "@tiptap/extension-text-align": "^2.1.12",
+    "@tiptap/extension-underline": "^2.1.12",
     "@tiptap/pm": "^2.1.12",
     "@tiptap/react": "^2.1.12",
     "@tiptap/starter-kit": "^2.1.12",
