--- a/client/.env
+++ b/client/.env
@@ -1,2 +1,3 @@
 VITE_REACT_APP_CLIENT_ID = "676990417523-rjofbnu95fiego8hk92lmdhjp0dhtklq.apps.googleusercontent.com"
 VITE_SERVER_DOMAIN = http://localhost:5000
+VITE_CLIENT_DOMAIN = http://localhost:5173
