--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@mantine/core": "^7.2.2",
+    "@mantine/form": "^7.2.2",
     "@mantine/hooks": "^7.2.2",
     "@mantine/tiptap": "^7.2.2",
     "@react-oauth/google": "^0.11.1",
