--- a/server/package.json
+++ b/server/package.json
@@ -5,6 +5,7 @@
     "main": "index.js",
     "type": "module",
     "scripts": {
+        "build": "node --experimental-modules ./index.js",
         "start": "nodemon --experimental-modules ./index.js",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
