--- a/client/package.json
+++ b/client/package.json
@@ -32,7 +32,9 @@
         "react-dom": "^18.2.0",
         "react-intersection-observer": "^9.5.3",
         "react-router-dom": "^6.16.0",
-        "react-scroll-trigger": "^0.6.14"
+        "react-scroll-trigger": "^0.6.14",
+        "react-visibility-sensor": "^5.1.1",
+        "use-count-up": "^3.0.1"
     },
     "devDependencies": {
         "@types/react": "^18.2.15",
